# crypto-be

./: .gitignore  db.sqlite3  pyproject.toml
app/: cmc.py  paystack.py  views.py
core/: settings.py  urls.py
crypto/: admin.py  models.py  pagination.py  paystack_views.py  serializers.py  urls.py  views.py
crypto/migrations/: 0001_initial.py
templates/: base.html  home.html
users/: serializers.py  urls.py  views.py
